--- a/1-1.html
+++ b/1-1.html
@@ -19,7 +19,7 @@
 	<script>
 		'use strict';
 		let four = document.getElementById('four');
-		console.log('link4');
+		console.log(four);
 
 	</script>
 </body>
