--- a/1-2.HTM
+++ b/1-2.HTM
@@ -18,6 +18,7 @@
     и выведите их в консоль. -->
 
 	<script>
+		'use strict';
 		let oneAll = document.getElementsByClassName('one');
 		console.log(oneAll);
 
