--- a/1-3.HTM
+++ b/1-3.HTM
@@ -29,6 +29,7 @@
     и выведите их в консоль. -->
 
 	<script>
+		'use strict';
 		let cardBodyEl = document.querySelector('.card-body');
 		let cardLinkEl = cardBodyEl.querySelectorAll('.card-link');
 		console.log(cardLinkEl);
