--- a/1-5.HTM
+++ b/1-5.HTM
@@ -12,7 +12,8 @@
 
 	<script>
 		'use strict';
-
+		let titleEll = document.querySelector('title');
+		console.log(titleEll.innerText);
 	</script>
 </body>
 
