--- a/3-3.html
+++ b/3-3.html
@@ -25,7 +25,9 @@
 
 	<script>
 		'use strict';
-
+		let dropdownMenuEll = document.querySelector('.dropdown-menu');
+		dropdownMenuEll.classList.remove('dropdown-menu');
+		console.log(dropdownMenuEll.classList);
 	</script>
 </body>
 
