--- a/3-7.html
+++ b/3-7.html
@@ -19,6 +19,13 @@
 
 	<!-- Задание. найдите заголовок с id="title" и замените значение id
     на что-то другое. -->
+	<script>
+		'use strict';
+		let headingEl = document.getElementById('title');
+		headingEl.id = 'title__article';
+
+
+	</script>
 </body>
 
 </html>
