--- a/1-2.html
+++ b/1-2.html
@@ -19,7 +19,7 @@
 
 	<script>
 		'use strict';
-		let oneAll = document.getElementsByClassName('one');
+		let oneClassAll = document.getElementsByClassName('one');
 		console.log(oneAll);
 
 	</script>
