--- a/1-2.html
+++ b/1-2.html
@@ -20,7 +20,7 @@
 	<script>
 		'use strict';
 		let oneClassAll = document.getElementsByClassName('one');
-		console.log(oneAll);
+		console.log(oneClassAll);
 
 	</script>
 </body>
