--- a/2-2.html
+++ b/2-2.html
@@ -20,9 +20,9 @@
 	<script>
 		'use strict';
 		let div = document.querySelector('div');
-		let headingEll = document.createElement('h3');
+		let heading3Ell = document.createElement('h3');
 		headingEll.innerText = 'hello world';
-		div.appendChild(headingEll);
+		div.appendChild(heading3Ell);
 
 	</script>
 </body>
