--- a/2-2.html
+++ b/2-2.html
@@ -21,7 +21,7 @@
 		'use strict';
 		let div = document.querySelector('div');
 		let heading3Ell = document.createElement('h3');
-		headingEll.innerText = 'hello world';
+		heading3Ell.innerText = 'hello world';
 		div.appendChild(heading3Ell);
 
 	</script>
