--- a/3-4.html
+++ b/3-4.html
@@ -17,8 +17,8 @@
     -->
 	<script>
 		'use strict';
-		let div = document.querySelector('.menu');
-		div.insertAdjacentHTML('beforeend', '<a href="#">link</a>');
+		let divMenu = document.querySelector('.menu');
+		divMenu.insertAdjacentHTML('beforeend', '<a href="#">link</a>');
 	</script>
 </body>
 
