--- a/3-6.html
+++ b/3-6.html
@@ -15,11 +15,17 @@
 
 	<script>
 		'use strict';
-		let h1Ell = document.querySelector('h1');
-		h1Ell.setAttribute('data-one', 'один');
-		h1Ell.setAttribute('data-two', 'два');
-		console.log(h1Ell.getAttribute('data-one'));
-		console.log(h1Ell.getAttribute('data-two'));
+
+		let headerH1 = document.querySelector('h1');
+		headerH1.setAttribute('data-one', 'один');
+		headerH1.setAttribute('data-two', 'два');
+
+		console.log(headerH1); // смотрим содержимое h1
+
+		// или содержимое атрибутов
+
+		console.log(headerH1.getAttribute('data-one'));
+		console.log(headerH1.getAttribute('data-two'));
 	</script>
 </body>
 
