--- a/5_1-1.html
+++ b/5_1-1.html
@@ -20,8 +20,8 @@
 	появилось изображение. -->
 	<script>
 		'use strict';
-		let imagesEll = document.querySelectorAll('img');
-		imagesEll.forEach(image => {
+		let imagesEllAll = document.querySelectorAll('img');
+		imagesEllAll.forEach(image => {
 			console.log(image);
 		});
 	</script>
