--- a/5_1-4.HTM
+++ b/5_1-4.HTM
@@ -21,8 +21,8 @@
 		'use strict';
 		let divEll = document.querySelector('div');
 		let classes = divEll.classList;
-		classes.forEach(function (cls) {
-			console.log(cls);
+		classes.forEach(function (clas) {
+			console.log(clas);
 
 		});
 
