--- a/5_1-5.html
+++ b/5_1-5.html
@@ -18,7 +18,10 @@
 	<script>
 		'use strict';
 
-		let divEll = document.getElementsBy
+		let divEll = document.querySelector('div');
+
+		console.log(divEll.classList.contains('hidden'));
+
 
 	</script>
 </body>
