--- a/5_1-6.html
+++ b/5_1-6.html
@@ -26,6 +26,24 @@
   1. Найдите все "карточки" с классом .card.
   2. Проверьте есть ли у карточки класс hidden с помощью метода contains(),
   и если есть, то удалите с помощью метода remove(). -->
+
+
+	<script>
+		'use strict';
+		let cardClassEll = document.querySelectorAll('.card');
+
+		cardClassEll.forEach(ellCard => {
+			console.log(ellCard.classList);
+
+			if (ellCard.classList.contains('hidden')) {
+				ellCard.classList.remove('card');
+			}
+			console.log(ellCard.classList);
+		});
+
+
+
+	</script>
 </body>
 
 </html>
