--- a/5_1-6.html
+++ b/5_1-6.html
@@ -36,7 +36,7 @@
 			console.log(ellCard.classList);
 
 			if (ellCard.classList.contains('hidden')) {
-				ellCard.classList.remove('card');
+				ellCard.classList.remove('hidden');
 			}
 			console.log(ellCard.classList);
 		});
