--- a/5_1-7.html
+++ b/5_1-7.html
@@ -23,8 +23,8 @@
 
 		let aEll = document.querySelectorAll('a');
 		for (let i = 0; i < document.links.length; i++) {
-			if (document.link[i].innerText !== 'ссылка') {
-				document.link[i].innerText = 'ссылка';
+			if (document.links[i].innerText !== 'ссылка') {
+				document.links[i].innerText = 'ссылка';
 			}
 		};
 
