--- a/5_1-9.html
+++ b/5_1-9.html
@@ -28,6 +28,16 @@
 
 	<script>
 
+		let iColl = document.querySelectorAll('i');
+		console.log(iColl);
+
+		iColl.forEach(i => {
+			console.log(i);
+
+			i.classList.toggle('green');
+		});
+
+
 
 	</script>
 </body>
